--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "node src/server.js",
     "prisma:migrate": "prisma migrate dev"
   },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/asxmr/museum-node.js.git"
@@ -27,5 +30,4 @@
     "morgan": "^1.10.1",
     "zod": "^4.2.1"
   }
-
 }
